--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,5 +5,8 @@
 @tailwind utilities;
 
 :root {
-  font-family: "Nunito", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --color-background: #FFF;
+  --color-primary: #7955B4;
+  --color-secondary: #D9D9D9;
+  --color-tertiary: #292929;
 }
